Fix: card design genre was overlapping title

--- a/src/style.css
+++ b/src/style.css
@@ -221,6 +221,7 @@ main {
 }
 
 .show-details h2 {
+  width: 100%;
   font-size: 1.5em;
 }
 
